--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     This is a HTML Index File.
 
-    <img src="./screenshot.png" alt="screenshot" />
+    <img src="./assets/images/screenshot.png" alt="screenshot" />
   </body>
 </html>
